force-app/main/default/objects/Demand__c/fields/RefRounder__c.field-meta.xml
<CustomField>
    <fullName>RefRounder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ラウンダー</label>
    <referenceTo>Rounder__c</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>demands</relationshipName>
    <type>Lookup</type>
</CustomField>