force-app/main/default/objects/Demand__c/fields/shiftcode__c.field-meta.xml
<CustomField>
    <fullName>shiftcode__c</fullName>
    <displayFormat>A-{000000}</displayFormat>
    <label>shiftcode</label>
    <type>AutoNumber</type>
</CustomField>