force-app/main/default/objects/Demand__c/fields/shopName__c.field-meta.xml
<CustomField>
    <fullName>shopName__c</fullName>
    <label>店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>