force-app/main/default/objects/Demand__c/fields/startingHour__c.field-meta.xml
<CustomField>
    <fullName>startingHour__c</fullName>
    <label>勤務開始時間</label>
    <type>Time</type>
</CustomField>